to check the change

--- a/StudyFoundation.ipynb
+++ b/StudyFoundation.ipynb
@@ -16,6 +16,23 @@
    "source": [
     "print(\"I am studying python\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "study makes you strong\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"study makes you strong\")"
+   ]
   }
  ],
  "metadata": {
