Calculate compund interest

--- a/StudyFoundation.ipynb
+++ b/StudyFoundation.ipynb
@@ -33,6 +33,51 @@
    "source": [
     "print(\"study makes you strong\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The amount of money accumulated after 7.0 years is: $1628348.34\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to calculate compound interest\n",
+    "def calculate_compound_interest(principal, rate, time, n):\n",
+    "    \"\"\"\n",
+    "    Calculate the compound interest.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    principal (float): the initial amount of money\n",
+    "    rate (float): the annual interest rate (in decimal)\n",
+    "    time (float): the time the money is invested or borrowed for, in years\n",
+    "    n (int): the number of times that interest is compounded per year\n",
+    "    \n",
+    "    Returns:\n",
+    "    float: the amount of money accumulated after n years, including interest.\n",
+    "    \"\"\"\n",
+    "    # A = P (1 + r/n)^(nt)\n",
+    "    amount = principal * (1 + rate / n) ** (n * time)\n",
+    "    return amount\n",
+    "\n",
+    "# Inputs\n",
+    "principal = float(input(\"Enter the principal amount (initial deposit): \"))\n",
+    "annual_rate = float(input(\"Enter the annual interest rate (as a percentage): \")) / 100\n",
+    "time = float(input(\"Enter the number of years the money is invested: \"))\n",
+    "n = int(input(\"Enter the number of times that interest is compounded per year: \"))\n",
+    "\n",
+    "# Calculate compound interest\n",
+    "final_amount = calculate_compound_interest(principal, annual_rate, time, n)\n",
+    "\n",
+    "# Display the result\n",
+    "print(f\"The amount of money accumulated after {time} years is: ${final_amount:.2f}\")\n"
+   ]
   }
  ],
  "metadata": {
