--- a/study data structure.ipynb
+++ b/study data structure.ipynb
@@ -2,12 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apples', 'oranges', 'banana', 'pineapple']\n",
+      "['apples', 'oranges', 'banana']\n",
+      "4\n",
+      "['apples', 'oranges', 'banana', 'pineapple']\n",
+      "['apples', 'banana', 'oranges', 'pineapple']\n",
+      "['pineapple', 'oranges', 'banana', 'apples']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create list\n",
+    "list1=[\"apples\",\"oranges\",\"banana\",\"pineapple\"]\n",
+    "\n",
+    "#list1.insert(0,\"lemon\")\n",
+    "#list1.pop()\n",
+    "print (list1)\n",
+    "print(list1[0:3])\n",
+    "print(len(list1))\n",
+    "#list1.pop()\n",
+    "print (list1)\n",
+    "\"cherry\" in list1\n",
+    "list1.sort()\n",
+    "print (list1)\n",
+    "list1.reverse()\n",
+    "print (list1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create list\n",
-    "list1=[\"apples\",\"oranges\",\"banana\",\"pineapple\"]"
+    "customer_info = (\"Alice Smith\", 123456, \"Finfine Branch\")\n"
    ]
   }
  ],
