--- a/study data structure.ipynb
+++ b/study data structure.ipynb
@@ -38,11 +38,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice Smith\n"
+     ]
+    }
+   ],
    "source": [
-    "customer_info = (\"Alice Smith\", 123456, \"Finfine Branch\")\n"
+    "customer_info = (\"Alice Smith\", 123456, \"Finfine Branch\")\n",
+    "print (customer_info[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balance: 300.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "customer_balances = {\n",
+    "123456: 1500.0, # account number: balance\n",
+    "789012: 300.0,\n",
+    "345678: 0.0\n",
+    "}\n",
+    "# Accessing balance\n",
+    "account_number = 789012\n",
+    "print(\"Balance:\", customer_balances.get(account_number,\"Account not found\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "{5678: 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a dictionary to store multiple customer balances, allowing balance\n",
+    "#updates for deposits and withdrawals.\n",
+    "\n",
+    "customer_bal={}\n",
+    "def customer_bala(account,balance):\n",
+    "    if account not in customer_bal:\n",
+    "        customer_bal[account]=0\n",
+    "        customer_bal[account] += balance\n",
+    "    else:\n",
+    "        print(\"account already in dictionary\")\n",
+    "        return account,balance\n",
+    "print(customer_bala(5678,100))\n",
+    "\n",
+    "\n",
+    "print(customer_bal)\n"
    ]
   }
  ],
