--- a/Study Series and data frame pandas.ipynb
+++ b/Study Series and data frame pandas.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -68,6 +68,10 @@
      "text": [
       "0     100\n",
       "1     100\n",
+      "2    3000\n",
+      "3    8000\n",
+      "4    5500\n",
+      "Name: Account Balance, dtype: int64\n",
       "2    3000\n",
       "3    8000\n",
       "4    5500\n",
@@ -80,7 +84,38 @@
     "accBalance=[100,100,3000,8000,5500]\n",
     "balance_series=pd.Series(accBalance,name=\"Account Balance\")\n",
     "#print(accBalance)\n",
-    "print(balance_series)\n"
+    "print(balance_series)\n",
+    "balance_filter=balance_series[balance_series>100]\n",
+    "print(balance_filter)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       Doni Aberra\n",
+      "1    Mathias Kebede\n",
+      "2      Lensa Aberra\n",
+      "3        Eden Simon\n",
+      "Name: Account Names, dtype: object\n",
+      "Doni Aberra Mathias Kebede\n",
+      "Doni Aberra\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "name=['Doni Aberra','Mathias Kebede','Lensa Aberra','Eden Simon']\n",
+    "name_series=pd.Series(name,name='Account Names')\n",
+    "print(name_series)\n",
+    "print(name_series[0],name_series[1])\n",
+    "name_filter='Doni Aberra'\n",
+    "print(name_filter)"
    ]
   }
  ],
