Series and Data Frame

--- a/Study Series and data frame pandas.ipynb
+++ b/Study Series and data frame pandas.ipynb
@@ -117,6 +117,48 @@
     "name_filter='Doni Aberra'\n",
     "print(name_filter)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   customer ID   Customer Name Account Type   Balance\n",
+      "0        10001     Doni Aberra       Saving   1000000\n",
+      "1        10002  Mathias Kebede      Current  10000000\n",
+      "2        10003    Lensa Aberra       Saving  50000000\n",
+      "3        10004      Eden Simon       Saving   2000000\n",
+      "4        10005   Adanech Hunde      current  30000000\n",
+      "   customer ID   Customer Name Account Type   Balance\n",
+      "1        10002  Mathias Kebede      Current  10000000\n",
+      "2        10003    Lensa Aberra       Saving  50000000\n",
+      "3        10004      Eden Simon       Saving   2000000\n",
+      "4        10005   Adanech Hunde      current  30000000\n",
+      "   customer ID Customer Name Account Type  Balance\n",
+      "0        10001   Doni Aberra       Saving  1000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "customer_data={\n",
+    "    \"customer ID\":[10001,10002,10003,10004,10005],\n",
+    "    \"Customer Name\":['Doni Aberra','Mathias Kebede','Lensa Aberra','Eden Simon','Adanech Hunde'],\n",
+    "    \"Account Type\":['Saving','Current','Saving','Saving','current'],\n",
+    "    \"Balance\":[1000000,10000000,50000000,2000000,30000000]\n",
+    "}\n",
+    "data_frame=pd.DataFrame(customer_data)\n",
+    "\n",
+    "print(data_frame.head())\n",
+    "data_filter_bal=data_frame[data_frame[\"Balance\"]> 1000000]\n",
+    "print(data_filter_bal)\n",
+    "data_filter_name=data_frame[data_frame[\"Customer Name\"]=='Doni Aberra']\n",
+    "print(data_filter_name)"
+   ]
   }
  ],
  "metadata": {
